# vocastock

./: .dockerignore  .firebaserc  .gitignore  .trivyignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cabal.project  firebase.json  hie.yaml
applications/backend/billing-worker/: billing-worker.cabal  cabal.project  hie.yaml
applications/backend/billing-worker/app/: Main.hs
applications/backend/billing-worker/src/BillingWorker/: AllowanceReset.hs  BillingJob.hs  CurrentSubscriptionHandoff.hs  NotificationPort.hs  PullLoop.hs  StripePort.hs  SubscriptionPersistence.hs  WorkItemContract.hs
applications/backend/billing-worker/tests/feature/: Main.hs
applications/backend/billing-worker/tests/feature/BillingWorker/: FeatureSpec.hs
applications/backend/billing-worker/tests/support/: FeatureSupport.hs  StripeDevProvider.hs  TestSupport.hs
applications/backend/billing-worker/tests/support-lib/BillingWorker/: BillingPersistence.hs  EntitlementRecalcPort.hs  FailureSummary.hs  PurchaseVerificationPort.hs  SubscriptionAuthorityPort.hs  WorkerRuntime.hs  WorkflowStateMachine.hs
applications/backend/billing-worker/tests/unit/: Main.hs
applications/backend/billing-worker/tests/unit/BillingWorker/: AllowanceResetSpec.hs  BillingPersistenceSpec.hs  CurrentSubscriptionHandoffSpec.hs  EntitlementRecalcPortSpec.hs  FailureSummarySpec.hs  NotificationPortSpec.hs  PurchaseVerificationPortSpec.hs  StripeLiveSpec.hs  StripePortSpec.hs  SubscriptionAuthorityPortSpec.hs  WorkItemContractSpec.hs  WorkerRuntimeSpec.hs  WorkflowStateMachineSpec.hs
applications/backend/command-api/: Cargo.toml
applications/backend/command-api/src/: lib.rs  main.rs
applications/backend/command-api/src/register_command_api/: mod.rs
applications/backend/command-api/src/register_command_api/command/: acceptance.rs  mod.rs  mutation_acceptance.rs  mutation_request.rs  mutation_response.rs  request.rs  response.rs
applications/backend/command-api/src/register_command_api/http/: endpoint.rs  mod.rs
applications/backend/command-api/src/register_command_api/runtime/: command_store.rs  dispatch_port.rs  firestore_command_store.rs  firestore_mutation_command_store.rs  mod.rs  mutation_command_store.rs  pubsub_dispatch_port.rs  server_loop.rs  service_contract.rs  stub_token_verifier.rs
applications/backend/command-api/src/server/: main.rs
applications/backend/command-api/tests/: feature.rs  unit.rs
applications/backend/command-api/tests/feature/: production_mutations.rs  register_vocabulary_command.rs
applications/backend/command-api/tests/support/: command_store.rs  dispatch_port.rs  feature.rs  stub_token_verifier.rs  unit.rs
applications/backend/command-api/tests/unit/: shared_auth.rs  shared_runtime.rs
applications/backend/command-api/tests/unit/register_command_api/: mod.rs
applications/backend/explanation-worker/: cabal.project  explanation-worker.cabal  hie.yaml
applications/backend/explanation-worker/app/: Main.hs
applications/backend/explanation-worker/src/ExplanationWorker/: AnthropicAdapter.hs  CurrentExplanationHandoff.hs  FailureSummary.hs  FirestoreWriter.hs  GenerationPort.hs  PullLoop.hs  RuntimeHttp.hs  WorkerRuntime.hs  WorkflowStateMachine.hs
applications/backend/explanation-worker/tests/: Cargo.toml  feature.rs
applications/backend/explanation-worker/tests/feature/: Main.hs  explanation_worker.rs
applications/backend/explanation-worker/tests/feature/ExplanationWorker/: FeatureSpec.hs
applications/backend/explanation-worker/tests/support/: AnthropicDevProvider.hs  FeatureSupport.hs  feature.rs
applications/backend/explanation-worker/tests/support-lib/ExplanationWorker/: ExplanationPersistence.hs  WorkItemContract.hs
applications/backend/explanation-worker/tests/unit/: Main.hs
applications/backend/explanation-worker/tests/unit/ExplanationWorker/: AnthropicAdapterSpec.hs  CurrentExplanationHandoffSpec.hs  ExplanationPersistenceSpec.hs  FailureSummarySpec.hs  GenerationPortSpec.hs  RuntimeHttpSpec.hs  WorkItemContractSpec.hs  WorkerRuntimeSpec.hs  (+1 more)
applications/backend/graphql-gateway/: Cargo.toml
applications/backend/graphql-gateway/schema/: schema.graphql
applications/backend/graphql-gateway/src/: lib.rs  main.rs
applications/backend/graphql-gateway/src/gateway_routing/: http_endpoint.rs  mod.rs  server_runtime.rs
applications/backend/graphql-gateway/src/server/: main.rs
applications/backend/graphql-gateway/tests/: feature.rs  unit.rs
applications/backend/graphql-gateway/tests/feature/: gateway_routing.rs  public_graphql_gateway.rs
applications/backend/graphql-gateway/tests/support/: feature.rs  unit.rs
applications/backend/graphql-gateway/tests/unit/: shared_runtime.rs
applications/backend/image-worker/: cabal.project  hie.yaml  image-worker.cabal
applications/backend/image-worker/app/: Main.hs
applications/backend/image-worker/src/ImageWorker/: AssetStoragePort.hs  CurrentImageHandoff.hs  FirestoreWriter.hs  ImageGenerationPort.hs  PullLoop.hs  StabilityAdapter.hs  WorkItemContract.hs
applications/backend/image-worker/tests/feature/: Main.hs
applications/backend/image-worker/tests/support/: FeatureSupport.hs  StabilityDevProvider.hs  TestSupport.hs
applications/backend/image-worker/tests/unit/: Main.hs
applications/backend/query-api/: Cargo.toml
applications/backend/query-api/src/: catalog_model.rs  catalog_read.rs  catalog_source.rs  http_endpoint.rs  lib.rs  main.rs  query_catalog_read.rs
applications/backend/query-api/src/query_catalog_read/: mod.rs
applications/backend/query-api/src/server/: main.rs
applications/backend/query-api/tests/: feature.rs  unit.rs
applications/backend/query-api/tests/feature/: actor_handoff_status.rs  explanation_detail.rs  image_detail.rs  learning_state.rs  subscription_status.rs  vocabulary_catalog.rs  vocabulary_expression_detail.rs
applications/backend/query-api/tests/support/: catalog_projection_source.rs  feature.rs  stub_token_verifier.rs  unit.rs
applications/backend/query-api/tests/unit/: catalog_source.rs  http_endpoint.rs  query_catalog_read.rs  stub_token_verifier.rs
(+739 files in other folders)
