[workspace]
members = [
  "applications/backend/graphql-gateway",
  "applications/backend/command-api",
  "applications/backend/query-api",
  "packages/rust/shared-auth",
  "packages/rust/shared-runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
