cabal-version: 3.4
name: billing-worker
version: 0.1.0.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
      BillingWorker.AllowanceReset
      BillingWorker.BillingJob
      BillingWorker.BillingPersistence
      BillingWorker.CurrentSubscriptionHandoff
      BillingWorker.EntitlementRecalcPort
      BillingWorker.FailureSummary
      BillingWorker.NotificationPort
      BillingWorker.PullLoop
      BillingWorker.PurchaseVerificationPort
      BillingWorker.StripePort
      BillingWorker.SubscriptionAuthorityPort
      BillingWorker.SubscriptionPersistence
      BillingWorker.WorkerRuntime
      BillingWorker.WorkflowStateMachine
      BillingWorker.WorkItemContract
  build-depends:
      base >=4.15 && <5
    , aeson
    , bytestring
    , containers
    , http-conduit
    , http-types
    , text
    , time
    , vocas-worker-core
  default-language: GHC2021

executable billing-worker
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >=4.15 && <5
    , billing-worker
  default-language: GHC2021

test-suite unit
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      tests/unit
      tests/support
  other-modules:
      BillingWorker.AllowanceResetSpec
      BillingWorker.BillingPersistenceSpec
      BillingWorker.CurrentSubscriptionHandoffSpec
      BillingWorker.EntitlementRecalcPortSpec
      BillingWorker.FailureSummarySpec
      BillingWorker.NotificationPortSpec
      BillingWorker.PurchaseVerificationPortSpec
      BillingWorker.StripeLiveSpec
      BillingWorker.StripePortSpec
      BillingWorker.SubscriptionAuthorityPortSpec
      BillingWorker.WorkItemContractSpec
      BillingWorker.WorkerRuntimeSpec
      BillingWorker.WorkflowStateMachineSpec
      StripeDevProvider
      TestSupport
  build-depends:
      base >=4.15 && <5
    , aeson
    , bytestring
    , billing-worker
    , http-conduit
    , http-types
    , network
    , text
    , vocas-worker-core
    , wai
    , warp
  default-language: GHC2021
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite feature
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      tests/feature
      tests/support
  other-modules:
      BillingWorker.FeatureSpec
      FeatureSupport
      TestSupport
  build-depends:
      base >=4.15 && <5
    , billing-worker
    , containers
    , directory
    , filepath
    , process
    , time
  default-language: GHC2021
