[package]
name = "command-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "vocastock command acceptance skeleton with readiness endpoint"
default-run = "command-api"

[dependencies]
shared-auth = { path = "../../../packages/rust/shared-auth" }
shared-runtime = { path = "../../../packages/rust/shared-runtime" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "command-api"
path = "src/main.rs"
