[package]
name = "command-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "vocastock command acceptance skeleton with readiness endpoint"
default-run = "command-api"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-auth = { path = "../../../packages/rust/shared-auth" }
shared-firestore = { path = "../../../packages/rust/shared-firestore" }
shared-pubsub = { path = "../../../packages/rust/shared-pubsub" }
shared-runtime = { path = "../../../packages/rust/shared-runtime" }

[lib]
path = "src/register_command_api/mod.rs"

[[bin]]
name = "command-api"
path = "src/server/main.rs"

[[test]]
name = "unit"
path = "tests/unit.rs"

[[test]]
name = "feature"
path = "tests/feature.rs"
