cabal-version: 3.4
name: explanation-worker
version: 0.1.0.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
      ExplanationWorker.AnthropicAdapter
      ExplanationWorker.FirestoreWriter
      ExplanationWorker.GenerationPort
      ExplanationWorker.PullLoop
  build-depends:
      base >=4.15 && <5
    , aeson
    , bytestring
    , containers
    , http-conduit
    , http-types
    , text
    , time
    , vocas-worker-core
  default-language: GHC2021

library scenarios
  visibility: public
  hs-source-dirs: tests/support-lib
  exposed-modules:
      ExplanationWorker.CurrentExplanationHandoff
      ExplanationWorker.ExplanationPersistence
      ExplanationWorker.FailureSummary
      ExplanationWorker.WorkerRuntime
      ExplanationWorker.WorkflowStateMachine
      ExplanationWorker.WorkItemContract
  build-depends:
      base >=4.15 && <5
    , explanation-worker
  default-language: GHC2021

executable explanation-worker
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >=4.15 && <5
    , explanation-worker
  default-language: GHC2021

test-suite unit
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      tests/unit
      tests/support
  other-modules:
      ExplanationWorker.AnthropicAdapterSpec
      ExplanationWorker.CurrentExplanationHandoffSpec
      ExplanationWorker.ExplanationPersistenceSpec
      ExplanationWorker.FailureSummarySpec
      ExplanationWorker.GenerationPortSpec
      ExplanationWorker.WorkItemContractSpec
      ExplanationWorker.WorkerRuntimeSpec
      ExplanationWorker.WorkflowStateMachineSpec
      AnthropicDevProvider
      TestSupport
  build-depends:
      base >=4.15 && <5
    , aeson
    , bytestring
    , explanation-worker
    , explanation-worker:scenarios
    , http-conduit
    , http-types
    , network
    , text
    , wai
    , wai-extra
    , warp
  default-language: GHC2021
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite feature
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      tests/feature
      tests/support
  other-modules:
      ExplanationWorker.FeatureSpec
      FeatureSupport
      TestSupport
  build-depends:
      base >=4.15 && <5
    , containers
    , directory
    , filepath
    , explanation-worker
    , explanation-worker:scenarios
    , process
    , time
  default-language: GHC2021
