[package]
name = "graphql-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "vocastock unified GraphQL gateway with public allowlisted routing"
default-run = "graphql-gateway"

[dependencies]
command-api = { path = "../command-api" }
query-api = { path = "../query-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-runtime = { path = "../../../packages/rust/shared-runtime" }

[lib]
path = "src/gateway_routing/mod.rs"

[[bin]]
name = "graphql-gateway"
path = "src/server/main.rs"

[[test]]
name = "unit"
path = "tests/unit.rs"

[[test]]
name = "feature"
path = "tests/feature.rs"
