cabal-version: 3.4
name: image-worker
version: 0.1.0.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
      ImageWorker.AssetStoragePort
      ImageWorker.FirestoreWriter
      ImageWorker.ImageGenerationPort
      ImageWorker.PullLoop
      ImageWorker.StabilityAdapter
  build-depends:
      base >=4.15 && <5
    , aeson
    , base64-bytestring
    , bytestring
    , containers
    , http-conduit
    , http-types
    , text
    , vocas-worker-core
  default-language: GHC2021

library scenarios
  visibility: public
  hs-source-dirs: tests/support-lib
  exposed-modules:
      ImageWorker.CurrentImageHandoff
      ImageWorker.FailureSummary
      ImageWorker.ImagePersistence
      ImageWorker.PreviousImageInvariant
      ImageWorker.SenseAttachmentInvariant
      ImageWorker.TargetResolution
      ImageWorker.WorkerRuntime
      ImageWorker.WorkflowStateMachine
      ImageWorker.WorkItemContract
  build-depends:
      base >=4.15 && <5
    , image-worker
  default-language: GHC2021

executable image-worker
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >=4.15 && <5
    , image-worker
  default-language: GHC2021

test-suite unit
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      tests/unit
      tests/support
  other-modules:
      ImageWorker.AssetStoragePortSpec
      ImageWorker.CurrentImageHandoffSpec
      ImageWorker.FailureSummarySpec
      ImageWorker.ImageGenerationPortSpec
      ImageWorker.ImagePersistenceSpec
      ImageWorker.PreviousImageInvariantSpec
      ImageWorker.PullLoopPromptSpec
      ImageWorker.SenseAttachmentInvariantSpec
      ImageWorker.StabilityAdapterSpec
      ImageWorker.TargetResolutionSpec
      ImageWorker.WorkItemContractSpec
      ImageWorker.WorkerRuntimeSpec
      ImageWorker.WorkflowStateMachineSpec
      StabilityDevProvider
      TestSupport
  build-depends:
      base >=4.15 && <5
    , aeson
    , base64-bytestring
    , bytestring
    , http-conduit
    , http-types
    , image-worker
    , image-worker:scenarios
    , network
    , text
    , vocas-worker-core
    , wai
    , warp
  default-language: GHC2021
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite feature
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      tests/feature
      tests/support
  other-modules:
      ImageWorker.FeatureSpec
      FeatureSupport
      TestSupport
  build-depends:
      base >=4.15 && <5
    , containers
    , directory
    , filepath
    , image-worker
    , image-worker:scenarios
    , process
    , time
  default-language: GHC2021
