[package]
name = "query-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "vocastock query read skeleton with readiness endpoint"
default-run = "query-api"

[dependencies]
shared-auth = { path = "../../../packages/rust/shared-auth" }
shared-runtime = { path = "../../../packages/rust/shared-runtime" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "query-api"
path = "src/main.rs"
