[package]
name = "query-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "vocastock query read skeleton with readiness endpoint"
default-run = "query-api"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-auth = { path = "../../../packages/rust/shared-auth" }
shared-firestore = { path = "../../../packages/rust/shared-firestore" }
shared-runtime = { path = "../../../packages/rust/shared-runtime" }

[lib]
path = "src/query_catalog_read/mod.rs"

[[bin]]
name = "query-api"
path = "src/server/main.rs"

[[test]]
name = "unit"
path = "tests/unit.rs"

[[test]]
name = "feature"
path = "tests/feature.rs"
